API Created for Getting Users and Owner with Paginations
