# src/controllers/user.controller.ts
@@ -1,7 +1,9 @@
-import { Body, Get, Post, Route, Tags } from "tsoa";
+import { Body, Get, Post, Query, Route, Tags } from "tsoa";
 import signinPayload from "../interface/requests/signinPayload";
 import signupPayload from "../interface/requests/signupPayload";
+import userPayload from "../interface/requests/userPayload";
 import { IUser } from "../interface/responce/IUser";
+import { IUserList } from "../interface/responce/IuserList";
 import userService from "../services/user.service";
 
 @Route("users")
@@ -22,8 +24,13 @@ export default class userController {
     return this.userService.getUser(body);
   }
 
-  @Get("/checkroom")
+  @Post("/check-room")
   public async check(@Body() body: any): Promise<IUser> {
     return this.userService.checkRoom(body);
+  }
+
+  @Post("/get-user-list")
+  public async getUserList(@Body() body: userPayload): Promise<IUserList> {
+    return this.userService.getList(body);
   }
 }
